[package]
name = "fidget-spinner"
version = "0.0.1"
authors = ["Darin Minamoto <darinm223@gmail.com>"]
description = "Simple OpenGL wrapper"
readme = "README.md"
license = "MIT"

[dependencies]
gl = "0.6.0"
glutin = "0.10.1"
png = "0.7"
cgmath = "0.14"
time = "0.1"

[lib]
name = "fidget_spinner"
path = "src/lib.rs"

[[bin]]
name = "fidget_spinner_bin"
path = "src/bin.rs"
